--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build-jlab:
   script:
     - mkdir -p /root/.docker
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /root/.docker/config.json
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile.jlab --destination $CI_REGISTRY_IMAGE/jlab:$CI_COMMIT_TAG --destination $CI_REGISTRY_IMAGE/jlab:latest
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile.jlab --destination $CI_REGISTRY_IMAGE/jlab:$CI_COMMIT_TAG --destination $CI_REGISTRY_IMAGE/jlab:latest --verbosity DEBUG
   # Only build git commits with tags
   only:
     - tags
