--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,39 +1,33 @@
-# Automaticall build images on push
-# Based on https://docs.gitlab.com/ee/ci/docker/using_kaniko.html
-build-jlab:
+# Based on Dimm's .gitlab-ci.yml:
+# https://gitlab.nautilus.optiputer.net/prp/golang-docker-gitlabci/blob/master/.gitlab-ci.yml
+
+image: docker:git
+
+before_script:
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN gitlab-registry.nautilus.optiputer.net
+
+stages:
+  - build
+
+.build-template: &build-def
   stage: build
-  image:
-    name: gcr.io/kaniko-project/executor:debug
-    entrypoint: [""]
-  script:
-    - mkdir -p /root/.docker
-    - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /root/.docker/config.json
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile.jlab --destination $CI_REGISTRY_IMAGE/jlab:$CI_COMMIT_TAG --destination $CI_REGISTRY_IMAGE/jlab:latest --verbosity INFO
-  # Only build git commits with tags
-  only:
-    - tags
-  # Give this CI job the tag "build-as-docker" (in GitLab, not git),
-  # so that the nautilus shared runners will pick up the job.
   tags:
     - build-as-docker
-  variables:
+  script:
+    - docker build -f Dockerfile.$SUBTAG -t $CI_REGISTRY_IMAGE/$SUBTAG:${CI_COMMIT_SHA:0:7} .
+    - docker tag $CI_REGISTRY_IMAGE/$SUBTAG:${CI_COMMIT_SHA:0:7} $CI_REGISTRY_IMAGE/$SUBTAG:latest
+    - docker push $CI_REGISTRY_IMAGE/$SUBTAG
+  variables: &var-def
     GET_SOURCES_ATTEMPTS: 3
 
+build-jlab:
+    <<: *build-def
+    variables:
+      <<: *var-def
+      SUBTAG: jlab
+
 build-ipp:
-  stage: build
-  image:
-    name: gcr.io/kaniko-project/executor:debug
-    entrypoint: [""]
-  script:
-    - mkdir -p /root/.docker
-    - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /root/.docker/config.json
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile.ipp --destination $CI_REGISTRY_IMAGE/ipp:$CI_COMMIT_TAG --destination $CI_REGISTRY_IMAGE/ipp:latest
-  # Only build git commits with tags
-  only:
-    - tags
-  # Give this CI job the tag "build-as-docker" (in GitLab, not git),
-  # so that the nautilus shared runners will pick up the job.
-  tags:
-    - build-as-docker
-  variables:
-    GET_SOURCES_ATTEMPTS: 3
+    <<: *build-def
+    variables:
+      <<: *var-def
+      SUBTAG: ipp
