--- a/Dockerfile.jlab
+++ b/Dockerfile.jlab
@@ -17,15 +17,15 @@ RUN conda install -c conda-forge jupyterlab \
 RUN pip install python-igraph sympy
 
 RUN jupyter labextension install \
-    @jupyter-widgets/jupyterlab-manager@0.35.0 \
+    @jupyter-widgets/jupyterlab-manager \
 # "Not a valid origin" error. I guess I'm missing a cert or something
-#    @jupyterlab/google-drive@0.12.0 \
-    @jupyterlab/plotly-extension@0.14.4 \
-    bqplot@0.3.6 \
-    ipyvolume@0.4.5 \
-    jupyter-leaflet@0.7.1 \
-    jupyterlab_vim@0.7.0 \
-    jupyterlab-toc@0.2.1
+#    @jupyterlab/google-drive \
+    @jupyterlab/plotly-extension \
+    bqplot \
+    ipyvolume \
+    jupyter-leaflet \
+    jupyterlab_vim \
+    jupyterlab-toc
 
 
 COPY WidgetTest.ipynb /home/jovyan
