--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,11 +11,16 @@ stages:
 
 .build-template: &build-def
   stage: build
+  # Only run build for tagged git commits
+  only:
+    tags
+  # Tag build job so that it will be picked
+  # up by shared gitlab-runners.
   tags:
     - build-as-docker
   script:
-    - docker build -f Dockerfile.$SUBTAG -t $CI_REGISTRY_IMAGE/$SUBTAG:${CI_COMMIT_SHA:0:7} .
-    - docker tag $CI_REGISTRY_IMAGE/$SUBTAG:${CI_COMMIT_SHA:0:7} $CI_REGISTRY_IMAGE/$SUBTAG:latest
+    - docker build -f Dockerfile.$SUBTAG -t $CI_REGISTRY_IMAGE/$SUBTAG:$CI_COMMIT_TAG .
+    - docker tag $CI_REGISTRY_IMAGE/$SUBTAG:$CI_COMMIT_TAG $CI_REGISTRY_IMAGE/$SUBTAG:latest
     - docker push $CI_REGISTRY_IMAGE/$SUBTAG
   variables: &var-def
     GET_SOURCES_ATTEMPTS: 3
