--- a/env.yml
+++ b/env.yml
@@ -2,125 +2,125 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - asn1crypto=0.24.0
-  - backcall=0.1.0
-  - bleach=2.1.3
-  - bqplot=0.10.5
-  - ca-certificates=2018.4.16
-  - certifi=2018.4.16
-  - cffi=1.11.5
-  - chardet=3.0.4
-  - cloudpickle=0.5.3
-  - cryptography=2.2.1
-  - cycler=0.10.0
-  - dask-core=0.18.1
-  - dbus=1.13.0
-  - decorator=4.3.0
-  - entrypoints=0.2.3
-  - expat=2.2.5
-  - fontconfig=2.12.6
-  - freetype=2.8.1
-  - gettext=0.19.8.1
-  - glib=2.55.0
-  - gmp=6.1.2
-  - gst-plugins-base=1.8.0
-  - gstreamer=1.8.0
-  - html5lib=1.0.1
-  - icu=58.2
-  - idna=2.7
-  - imageio=2.3.0
-  - ipykernel=4.8.2
-  - ipython=6.4.0
-  - ipython_genutils=0.2.0
-  - ipyvolume=0.4.6
-  - ipywebrtc=0.3.0
-  - ipywidgets=7.2.1
-  - jedi=0.12.0
-  - jinja2=2.10
-  - jpeg=9c
-  - jsonschema=2.6.0
-  - jupyter_client=5.2.3
-  - jupyter_core=4.4.0
-  - jupyterlab_launcher=0.10.5
-  - kiwisolver=1.0.1
-  - libffi=3.2.1
-  - libiconv=1.15
-  - libpng=1.6.34
-  - libsodium=1.0.16
-  - libtiff=4.0.9
-  - libxcb=1.13
-  - libxml2=2.9.8
-  - markupsafe=1.0
-  - matplotlib=2.2.2
-  - mistune=0.8.3
-  - mkl_fft=1.0.2
-  - mkl_random=1.0.1
-  - nbconvert=5.3.1
-  - nbformat=4.4.0
-  - ncurses=5.9
-  - networkx=2.1
-  - notebook=5.5.0
-  - olefile=0.45.1
-  - openssl=1.0.2o
-  - pandas=0.23.1
-  - pandoc=2.2.1
-  - pandocfilters=1.4.2
-  - parso=0.3.0
-  - pcre=8.41
-  - pexpect=4.6.0
-  - pickleshare=0.7.4
-  - pillow=5.2.0
-  - pip=9.0.3
-  - prompt_toolkit=1.0.15
-  - ptyprocess=0.6.0
-  - pycparser=2.18
-  - pygments=2.2.0
-  - pyopenssl=18.0.0
-  - pyparsing=2.2.0
-  - pyqt=5.6.0
-  - pysocks=1.6.8
-  - python=3.6.5
-  - python-dateutil=2.7.3
-  - pytz=2018.5
-  - pywavelets=0.5.2
-  - pyzmq=17.0.0
-  - qgrid=1.0.5
-  - qt=5.6.2
-  - readline=7.0
-  - requests=2.19.1
-  - scikit-image=0.14.0
-  - send2trash=1.5.0
-  - setuptools=39.2.0
-  - simplegeneric=0.8.1
-  - sip=4.18
-  - six=1.11.0
-  - sqlite=3.20.1
-  - terminado=0.8.1
-  - testpath=0.3.1
-  - tk=8.6.7
-  - toolz=0.9.0
-  - tornado=5.0.2
-  - traitlets=4.3.2
-  - traittypes=0.2.1
-  - urllib3=1.23
-  - wcwidth=0.1.7
-  - webencodings=0.5
-  - wheel=0.31.0
-  - widgetsnbextension=3.2.1
-  - xorg-libxau=1.0.8
-  - xorg-libxdmcp=1.1.2
-  - xz=5.2.3
-  - zeromq=4.2.5
-  - zlib=1.2.11
-  - intel-openmp=2018.0.3
-  - ipyparallel=6.2.1
-  - libgcc=7.2.0
-  - libgcc-ng=7.2.0
-  - libgfortran-ng=7.2.0
-  - libstdcxx-ng=7.2.0
-  - mkl=2018.0.3
-  - numpy=1.14.2
-  - scipy=1.1.0
+  - asn1crypto
+  - backcall
+  - bleach
+  - bqplot
+  - ca-certificates
+  - certifi
+  - cffi
+  - chardet
+  - cloudpickle
+  - cryptography
+  - cycler
+  - dask-core
+  - dbus
+  - decorator
+  - entrypoints
+  - expat
+  - fontconfig
+  - freetype
+  - gettext
+  - glib
+  - gmp
+  - gst-plugins-base
+  - gstreamer
+  - html5lib
+  - icu
+  - idna
+  - imageio
+  - ipykernel
+  - ipython
+  - ipython_genutils
+  - ipyvolume
+  - ipywebrtc
+  - ipywidgets
+  - jedi
+  - jinja2
+  - jpeg
+  - jsonschema
+  - jupyter_client
+  - jupyter_core
+  - jupyterlab_launcher
+  - kiwisolver
+  - libffi
+  - libiconv
+  - libpng
+  - libsodium
+  - libtiff
+  - libxcb
+  - libxml2
+  - markupsafe
+  - matplotlib
+  - mistune
+  - mkl_fft
+  - mkl_random
+  - nbconvert
+  - nbformat
+  - ncurses
+  - networkx
+  - notebook
+  - olefile
+  - openssl
+  - pandas
+  - pandoc
+  - pandocfilters
+  - parso
+  - pcre
+  - pexpect
+  - pickleshare
+  - pillow
+  - pip
+  - prompt_toolkit
+  - ptyprocess
+  - pycparser
+  - pygments
+  - pyopenssl
+  - pyparsing
+  - pyqt
+  - pysocks
+  - python
+  - python-dateutil
+  - pytz
+  - pywavelets
+  - pyzmq
+  - qgrid
+  - qt
+  - readline
+  - requests
+  - scikit-image
+  - send2trash
+  - setuptools
+  - simplegeneric
+  - sip
+  - six
+  - sqlite
+  - terminado
+  - testpath
+  - tk
+  - toolz
+  - tornado
+  - traitlets
+  - traittypes
+  - urllib3
+  - wcwidth
+  - webencodings
+  - wheel
+  - widgetsnbextension
+  - xorg-libxau
+  - xorg-libxdmcp
+  - xz
+  - zeromq
+  - zlib
+  - intel-openmp
+  - ipyparallel
+  - libgcc
+  - libgcc-ng
+  - libgfortran-ng
+  - libstdcxx-ng
+  - mkl
+  - numpy
+  - scipy
   - pip:
     - autograd
     - boltons
