--- a/jlab.yml
+++ b/jlab.yml
@@ -1,25 +1,10 @@
 ---
-# Shared Storage
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: jupyterlab-storage
-spec:
-  storageClassName: rook-block
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
-
----
 # Jupyterlab
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: jupyterlab-deployment
+  name: jupyterlab
 spec:
   template:
     metadata:
@@ -28,20 +13,33 @@ spec:
     spec:
       containers:
       - name: jupyterlab-container
-        image: oliverevans96/jupyterlab-widgets
+        image: gitlab-registry.nautilus.optiputer.net/oliverevans96/jupyterlab-ipp/jlab
+        env:
+        - name: SCRATCH
+          value: "/scratch"
         volumeMounts:
-        - name: jupyterlab-storage-vol
-          mountPath: /home/jovyan/work
+        - name: scratch-vol
+          mountPath: /scratch
         - name: jupyter-config-vol
-          mountPath: /home/jovyan/.jupyter/jupyter_notebook_config.py
-          subPath: jupyter_notebook_config.py
+          mountPath: /home/jovyan/.jupyter
+        - name: ipython-config-vol
+          mountPath: /home/jovyan/.ipython
       volumes:
-      - name: jupyterlab-storage-vol
-        persistentVolumeClaim:
-          claimName: jupyterlab-storage
+      - name: scratch-vol
+        nfs:
+          server: 10.244.25.108
+          path: "/jlab/scratch"
       - name: jupyter-config-vol
-        secret:
-          secretName: jupyter-config
+        nfs:
+          server: 10.244.25.108
+          path: "/jlab/config/jupyter"
+      - name: ipython-config-vol
+        nfs:
+          server: 10.244.25.108
+          path: "/jlab/config/ipython"
+
+---
+# Expose JupyterLab
 ---
 apiVersion: v1
 kind: Service
@@ -55,6 +53,7 @@ spec:
   ports:
   - port: 80
     targetPort: 8888
+
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
@@ -64,17 +63,102 @@ metadata:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-  - host: jupyterlab-widgets.nautilus.optiputer.net
+  - host: oliver-jlab-ipp.nautilus.optiputer.net
     http:
       paths:
       - backend:
           serviceName: traefik-jupyterlab
           servicePort: 80
+
 ---
 # IPyParallel Cluster
 ---
-
-apiversion: apps/v1beta1
+# Configuration
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ipcontroller-client-config
+data: &client-conf
+  registration: 47137,
+  control: 58083,
+  mux: 51855,
+  task: 44815,
+  iopub: 43985,
+  notification: 33805,
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ipcontroller-engine-config
+data: &engine-conf
+  registration: 47137,
+  control: 55613,
+  mux: 43201,
+  hb_ping: 59543,
+  hb_pong: 33721,
+  task: 46615,
+  iopub: 42121,
+---
+# IPController Service
+kind: Service
+apiVersion: v1
+metadata:
+  name: ipcontroller-service
+spec:
+  selector:
+    app: ipcontroller
+  ports:
+    # registration
+  - protocol: TCP
+    port: 47137
+    targetPort: 47137
+    # client-control
+  - protocol: TCP
+    port: 58083
+    targetPort: 58083
+    # client-mux
+  - protocol: TCP
+    port: 51855
+    targetPort: 51855
+    # client-task
+  - protocol: TCP
+    port: 44815
+    targetPort: 44815
+    # client-iopub
+  - protocol: TCP
+    port: 43985
+    targetPort: 43985
+    # client-notification
+  - protocol: TCP
+    port: 33805
+    targetPort: 33805
+    # engine-control
+  - protocol: TCP
+    port: 55613
+    targetPort: 55613
+    # engine-mux
+  - protocol: TCP
+    port: 43201
+    targetPort: 43201
+    # engine-hb_ping
+  - protocol: TCP
+    port: 59543
+    targetPort: 59543
+    # engine-hb_pong
+  - protocol: TCP
+    port: 33721
+    targetPort: 33721
+    # engine-task
+  - protocol: TCP
+    port: 46615
+    targetPort: 46615
+    # engine-iopub
+  - protocol: TCP
+    port: 42121
+    targetPort: 42121
+---
+# IPController
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: ipcontroller
@@ -82,26 +166,34 @@ spec:
   template:
     metadata:
       labels:
-        app: ipcluster
+        app: ipcontroller
     spec:
       containers:
-      - name: jupyterlab-container
-        image: oliverevans96/ipcontroller
-        volumemounts:
-        - name: jupyterlab-storage-vol
-          mountpath: /home/jovyan/work
-        - name: jupyter-config-vol
-          mountpath: /home/jovyan/.jupyter/jupyter_notebook_config.py
-          subpath: jupyter_notebook_config.py
+      - name: ipcontroller-container
+        image: gitlab-registry.nautilus.optiputer.net/oliverevans96/jupyterlab-ipp/ipp
+        command: ["ipcontroller"]
+        args: ["--reuse"]
+        env:
+        - name: SCRATCH
+          value: "/scratch"
+        volumeMounts:
+        - name: scratch-vol
+          mountPath: /scratch
+        - name: ipython-config-vol
+          mountPath: /root/.ipython
       volumes:
-      - name: jupyterlab-storage-vol
-        persistentvolumeclaim:
-          claimname: jupyterlab-storage
-      - name: jupyter-config-vol
-        secret:
-          secretname: jupyter-config
+      - name: scratch-vol
+        nfs:
+          server: 10.244.25.108
+          path: "/jlab/scratch"
+      - name: ipython-config-vol
+        nfs:
+          server: 10.244.25.108
+          path: "/jlab/config/ipython"
+
 ---
-apiversion: apps/v1beta1
+# IPEngine
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: ipengine
@@ -109,22 +201,26 @@ spec:
   template:
     metadata:
       labels:
-        app: ipcluster
+        app: ipengine
     spec:
       containers:
-      - name: jupyterlab-container
-        image: oliverevans96/jupyterlab-widgets
-        volumemounts:
-        - name: jupyterlab-storage-vol
-          mountpath: /home/jovyan/work
-        - name: jupyter-config-vol
-          mountpath: /home/jovyan/.jupyter/jupyter_notebook_config.py
-          subpath: jupyter_notebook_config.py
+      - name: ipengine-container
+        image: gitlab-registry.nautilus.optiputer.net/oliverevans96/jupyterlab-ipp/ipp
+        command: ["ipengine"]
+        env:
+        - name: SCRATCH
+          value: "/scratch"
+        volumeMounts:
+        - name: scratch-vol
+          mountPath: /scratch
+        - name: ipython-config-vol
+          mountPath: /root/.ipython
       volumes:
-      - name: jupyterlab-storage-vol
-        persistentvolumeclaim:
-          claimname: jupyterlab-storage
-      - name: jupyter-config-vol
-        secret:
-          secretname: jupyter-config
-
+      - name: scratch-vol
+        nfs:
+          server: 10.244.25.108
+          path: "/jlab/scratch"
+      - name: ipython-config-vol
+        nfs:
+          server: 10.244.25.108
+          path: "/jlab/config/ipython"
